--- a/index.html
+++ b/index.html
@@ -9,12 +9,28 @@
 	</head>
 	<body>
 		<div class="container"> 
-			<img src="images/background.png" />
-			<img src="images/button.png" id="btnCategory1" onclick="onCategory1Click();" class="category_button_1 category_button" />
-			<img src="images/button.png" id="btnCategory2" onclick="onCategory2Click();" class="category_button_2 category_button" />
-			<img src="images/button.png" id="btnCategory3" onclick="onCategory3Click();" class="category_button_3 category_button" />
+			<!-- <img src="images/background.jpg" /> -->
+			<div id="btnCategory1" onclick="onCategory1Click();" class="category_button_1 category_button " ></div>
+			<div id="btnCategory2" onclick="onCategory2Click();" class="category_button_2 category_button " ></div>
+			<div id="btnCategory3" onclick="onCategory3Click();" class="category_button_3 category_button " ></div>
+
+			<div class="progess_bar">
+				<img src="images/bar-01.jpg" />
+				<img src="images/bar-02.jpg" />
+			</div>
+
+			<div class="left_panel">
+				<img src="images/subScreen-02.jpg" />
+			</div>
+
+
+			<div class="screen">
+				<img src="images/screen-01.jpg" />
+				<img src="images/screen-02.jpg" />
+			</div>
 		</div>
 
+		<script type="text/javascript" src="js/libs/leap.js"></script>
 		<script type="text/javascript" src="js/game.js"></script>
 	</body>
 </html>
