--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
 				<img id="bar_5" src="images/bar-05.jpg" style="display:none" />
 			</div>
 
+			<div class="left_header">
+				<img id="text_1" src="images/text-01.jpg" />
+				<img id="text_2" src="images/text-02.jpg" style="display:none" />
+				<img id="text_3" src="images/text-03.jpg" style="display:none" />
+				<img id="text_4" src="images/text-04.jpg" style="display:none" />
+				<img id="text_5" src="images/text-05.jpg" style="display:none" />
+			</div>
+
 			<div class="left_panel">
 				<img id="subScreen_1" src="images/subScreen-01.jpg" />
 				<img id="subScreen_2" src="images/subScreen-02.jpg" style="display:none" />
 				<img id="subScreen_3" src="images/subScreen-03.jpg" style="display:none" />
 				<img id="subScreen_4" src="images/subScreen-04.jpg" style="display:none" />
 				<img id="subScreen_5" src="images/subScreen-05.jpg" style="display:none" />
+
 			</div>
 
 
