--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 			<div id="btnCategory2" onclick="onCategory2Click();" class="category_button_2 category_button " ></div>
 			<div id="btnCategory3" onclick="onCategory3Click();" class="category_button_3 category_button " ></div>
 
+			<div class="logo">
+				<img src="images/logo.png" />
+			</div>
+
 			<div class="progess_bar">
 				<img id="bar_1" src="images/bar-01.jpg" />
 				<img id="bar_2" src="images/bar-02.jpg" style="display:none" />
