--- a/video.html
+++ b/video.html
@@ -37,7 +37,7 @@
 			</div>
 
 			<div class="left_panel">
-				<img id="subScreen_5" src="images/subScreen-05.jpg" />
+				<img id="subScreen_5" src="images/subScreen-05.png" />
 				<!-- <img id="subScreen_2" src="images/subScreen-02.jpg" style="display:none" />
 				<img id="subScreen_3" src="images/subScreen-03.jpg" style="display:none" />
 				<img id="subScreen_4" src="images/subScreen-04.jpg" style="display:none" />
